--- a/index.html
+++ b/index.html
@@ -10,21 +10,26 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Crimson+Pro:wght@200&family=Lora&family=Montserrat:wght@700&display=swap" 
   rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
   <!-- Font Awesome -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" 
-  integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" 
+  integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
     <nav>
       <div class="logo">This Interior</div>
-      <ul>
-        <li class="active"><a href="#">Home</a></li>
-        <li><a href="#">Collection</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul>
+      <div class="navi">
+        <ul class= "links">
+          <li class="active"><a href="#">Home</a></li>
+          <li><a href="#">Collection</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </div>
+      <div class="hidden"><i class="fa fa-2x fa-bars" aria-hidden="true"></i></div>
     </nav>
   </header>
   <main>
@@ -32,13 +37,26 @@
         <div class="title">Modern interior</div>
         <div class="title-desc"><p>A full-Service residential & commercial 
           interior design and staging company offering professional organizing & eco-services.</p>
-        <a href="#">Read More<i class="fas fa-long-arrow-alt-right"></i></a>
+        <a href="#">Read More&nbsp;&nbsp; <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
         </div>
       </div>
       <div class="right">
         <img src="./images/photo1.png" alt="Background Image">
+        <div class="card">
+          <div class="card-details">
+            <div class="card-image">
+              <img src="./images/photo2.png" alt="User">
+            </div>
+            <div class="card-detail">
+              <h1>Aliza Webber</h1>
+              <h2>Interior designer</h2>
+            </div>          
+          </div>
+          <p>Designed in 2020 by Aliza Webber</p>
+        </div>
       </div>
   </main>
+  <footer><p>Jerin Easo Regi &copy; DevChallenges.io</p></footer>
   <script src="./js/app.js"></script>
 </body>
 </html>
